--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,7 @@
 <ul>
+    <li>
+        <img src="https://cdn.discordapp.com/attachments/1075331512855183401/1076063231027728384/Logo_marcofatteloandarebene.png" alt="">
+    </li>
     <li><a [routerLink]="['']">Home</a></li>
     <li><a [routerLink]="['auto']">auto</a></li>
     <li><a href="/#chi_siamo">chi siamo</a></li>
