--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -12,7 +12,10 @@ p {
     font-size: 2.5vw;
     color: whitesmoke;
 }
-
+a:visited
+{
+    color: black;
+}
 .CRMtitle {
     width: 66%;
     /* padding: 1%; */
@@ -98,11 +101,7 @@ p {
     margin-bottom: 0;
     /* text-shadow: 0 0 30px black; */
 }
-#cat
-{
-    
-    
-}
+
 #cat:hover
 {
     box-shadow: 0px 0px 25px black;
@@ -218,13 +217,6 @@ p {
     text-align: center;
     padding: 100px;
 }
-
-.googlemaps {
-    /* position: absolute; */
-    /* top: 0; */
-    /* height: 100%; */
-}
-
 .googlemaps > * {
     width: 100%;
     margin: 0;
