--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -51,7 +51,7 @@
     </div>
 </section>
 <section>
-    <div class="chi_siamo">
+    <div class="chi_siamo" id="chi_siamo">
         <div>
             <h2 id="chi_siamotit">
                 chi siamo
