Icone Linked In

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -311,3 +311,7 @@ a:visited
 .autoCont > .Bassocosto > div {
     background-image: url("https://media.discordapp.net/attachments/1075331512855183401/1076079677518663690/5s8HX9NvcBJWIsdxSK4F7l-c2788a73d9319b245cac2f58368373c7-lancia-delta-front-1100.jpg?width=659&height=455");
 }
+
+.linkedin {
+    margin: 10px;
+}
