--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -39,8 +39,65 @@
                     <h2>le nostre sedi</h2>
                 </div>
                 <h3>
-                    Paese: Santarcangelo di Romagna RN<br>Via: Via Emilia, 1609<br>Email:
-                    carrentalmaggioli.assistenza@gmail.com <br>Tel: +39 3927374863
+                    <svg class="icone" width="5.6444445mm" height="9.847393mm" viewBox="0 0 20 34.892337" id="svg3455"
+                        version="1.1" inkscape:version="0.91 r13725" sodipodi:docname="Map Pin.svg">
+                        <defs id="defs3457" />
+                        <g inkscape:label="Layer 1" inkscape:groupmode="layer" id="layer1"
+                            transform="translate(-814.59595,-274.38623)">
+                            <g id="g3477" transform="matrix(1.1855854,0,0,1.1855854,-151.17715,-57.3976)">
+                                <path sodipodi:nodetypes="sscccccsscs" inkscape:connector-curvature="0" id="path4337-3"
+                                    d="m 817.11249,282.97118 c -1.25816,1.34277 -2.04623,3.29881 -2.01563,5.13867 0.0639,3.84476 1.79693,5.3002 4.56836,10.59179 0.99832,2.32851 2.04027,4.79237 3.03125,8.87305 0.13772,0.60193 0.27203,1.16104 0.33416,1.20948 0.0621,0.0485 0.19644,-0.51262 0.33416,-1.11455 0.99098,-4.08068 2.03293,-6.54258 3.03125,-8.87109 2.77143,-5.29159 4.50444,-6.74704 4.56836,-10.5918 0.0306,-1.83986 -0.75942,-3.79785 -2.01758,-5.14062 -1.43724,-1.53389 -3.60504,-2.66908 -5.91619,-2.71655 -2.31115,-0.0475 -4.4809,1.08773 -5.91814,2.62162 z"
+                                    style="display:inline;opacity:1;fill: transparent;fill-opacity:1;stroke: #ffffff;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+                                <circle r="3.0355" cy="288.25278" cx="823.03064" id="path3049"
+                                    style="display:inline;opacity:1;fill: #ffffff;fill-opacity:1;stroke-width:0" />
+                            </g>
+                        </g>
+                    </svg>
+                    : Santarcangelo di Romagna RN  Via Emilia, 1609<br>
+                    <svg class="icone" enable-background="new 0 0 200 200" xml:space="preserve" version="1.1" y="0px"
+                        x="0px" viewBox="0 0 200 200">
+                        <g id="Layer_2">
+                            <path stroke="#ffff" stroke-width="8" stroke-miterlimit="10"
+                                d="m194.77 146.09c0 6.627-5.373 12-12 12h-166c-6.627 0-12-5.373-12-12v-96.226c0-6.627 5.373-12 12-12h166c6.627 0 12 5.373 12 12v96.226z"
+                                fill="transparent" />
+                        </g>
+                        <g id="Layer_3" stroke="#ffff" stroke-width="8" stroke-miterlimit="10" fill="transparent">
+                            <polyline points="10.409 41.273 99.5 148 187.27 42.409" />
+                            <line y2="111.95" x1="9.318" x2="65.909" y1="153.32" />
+                            <line y2="153.32" x1="128.86" x2="189.32" y1="108.55" />
+                        </g>
+                    </svg>
+                    : carrentalmaggioli.assistenza@gmail.com <br>
+
+                    <svg class="icone"
+                        style="shape-rendering:geometricPrecision;text-rendering:geometricPrecision;image-rendering:optimizeQuality"
+                        fill-rule="evenodd" xml:space="preserve" clip-rule="evenodd" viewBox="0 0 58.282 58.282">
+                        <defs>
+                            <style type="text/css">
+                                .fil0 {
+                                    fill: #ffff
+                                }
+
+                                .fil1 {
+                                    fill: #ffff;
+                                    fill-rule: nonzero
+                                }
+                            </style>
+                        </defs>
+                        <g id="Layer_x0020_1">
+                            <g id="_152222920">
+                                <path id="_152222248" class="fil0"
+                                    d="m24.186 22.5c-5.4466 3.1445 2.8637 18.724 8.8237 15.283 1.0584 1.8332 4.4676 7.7381 5.526 9.5712-2.5146 1.4519-4.6432 2.3671-7.5585 0.70054-8.0946-4.6273-17.005-20.054-16.751-29.256 0.088046-3.196 1.971-4.4482 4.434-5.8702 1.0584 1.8332 4.4676 7.738 5.526 9.5712z" />
+                                <path id="_150519168" class="fil0"
+                                    d="m26.47 22.24c-0.58849 0.33978-1.3458 0.13697-1.6856-0.45158l-5.2095-9.0232c-0.33984-0.58862-0.13704-1.3459 0.45152-1.6857l2.738-1.5808c0.58855-0.33984 1.346-0.13685 1.6858 0.4517l5.2095 9.0231c0.33978 0.58849 0.13691 1.3458-0.45158 1.6856l-2.738 1.5808z" />
+                                <path id="_226148072" class="fil0"
+                                    d="m40.702 46.89c-0.58849 0.33978-1.3458 0.13697-1.6856-0.45164l-5.2095-9.0232c-0.33984-0.58855-0.13704-1.3459 0.45152-1.6856l2.738-1.5808c0.58855-0.33978 1.346-0.13679 1.6858 0.4517l5.2095 9.0231c0.33978 0.58855 0.13691 1.3459-0.45158 1.6856l-2.738 1.5808z" />
+                            </g>
+                            <path class="fil1"
+                                d="m29.141-2.845e-15h0.0004319v0.006787c8.05 0.0001234 15.335 3.26 20.604 8.5296 5.2693 5.2693 8.5291 12.554 8.5293 20.604h0.006787v0.0013574h-0.006787c-0.0001234 8.05-3.26 15.335-8.5296 20.604-5.2694 5.2693-12.554 8.5291-20.604 8.5293v0.006787h-0.0013574v-0.006787c-8.05-0.0001234-15.335-3.26-20.604-8.5296-5.2693-5.2694-8.5291-12.554-8.5293-20.604h-0.006787v-0.0013574h0.006787c0.0001234-8.05 3.26-15.335 8.5296-20.604 5.2693-5.2693 12.554-8.5291 20.604-8.5293v-0.006787h0.0009255zm0.0004319 3.4758v0.006787h-0.0013574v-0.006787c-7.0792 0.0001851-13.494 2.8753-18.141 7.5226-4.6477 4.6476-7.5229 11.063-7.5229 18.142h0.006787v0.0013574h-0.006787c0.0001851 7.0792 2.8753 13.494 7.5226 18.141 4.6476 4.6477 11.063 7.5229 18.142 7.5229v-0.006787h0.0013574v0.006787c7.0792-0.0001851 13.494-2.8753 18.141-7.5226 4.6477-4.6476 7.5229-11.063 7.5229-18.142h-0.006787v-0.0013574h0.006787c-0.0001851-7.0792-2.8753-13.494-7.5226-18.141-4.6476-4.6477-11.063-7.5229-18.142-7.5229z" />
+                        </g>
+                    </svg>
+                    : +39 3927374863
                 </h3>
             </div>
             <div class="googlemaps">
@@ -56,23 +113,31 @@
             <h2 id="chi_siamotit">
                 chi siamo
             </h2>
-            <p id="par_chi_siamo" >
+            <p id="par_chi_siamo">
                 <svg class="linkedin" fill="white" width="2rem" height="2rem" viewBox="0 0 24 24">
-                    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-                </svg> 
-                <a href="https://www.linkedin.com/in/marcodilena1905/" style="color: white;" target="_blank">Di Lena Marco</a><br>
+                    <path
+                        d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                </svg>
+                <a href="https://www.linkedin.com/in/marcodilena1905/" style="color: white;" target="_blank">Di Lena
+                    Marco</a><br>
                 <svg class="linkedin" fill="white" width="2rem" height="2rem" viewBox="0 0 24 24">
-                    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-                </svg> 
-                <a href="https://www.linkedin.com/in/filippo-ispani-a7aa12266/" style="color: white;" target="_blank">Ispani Filippo</a><br>
+                    <path
+                        d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                </svg>
+                <a href="https://www.linkedin.com/in/filippo-ispani-a7aa12266/" style="color: white;"
+                    target="_blank">Ispani Filippo</a><br>
                 <svg class="linkedin" fill="white" width="2rem" height="2rem" viewBox="0 0 24 24">
-                    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-                </svg> 
-                <a href="https://www.linkedin.com/in/leonardo-geminiani-263753191/" style="color: white;" target="_blank">Geminiani Leonardo</a><br>
+                    <path
+                        d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                </svg>
+                <a href="https://www.linkedin.com/in/leonardo-geminiani-263753191/" style="color: white;"
+                    target="_blank">Geminiani Leonardo</a><br>
                 <svg class="linkedin" fill="white" width="2rem" height="2rem" viewBox="0 0 24 24">
-                    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-                </svg> 
-                <a href="https://www.linkedin.com/in/guglielmo-lombardi-23566a265/" style="color: white;" target="_blank">Lombardi Guglielmo</a>
+                    <path
+                        d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                </svg>
+                <a href="https://www.linkedin.com/in/guglielmo-lombardi-23566a265/" style="color: white;"
+                    target="_blank">Lombardi Guglielmo</a>
             </p>
         </div>
         <div class="footer">
