--- a/src/app/components/auto/auto.component.html
+++ b/src/app/components/auto/auto.component.html
@@ -82,7 +82,7 @@
                         </tr>
                         <tr>
                             <th>Prezzo</th>
-                            <td>{{r.prezzo}}</td>
+                            <td>{{r.prezzo | currency:"EUR"}}</td>
                         </tr>
                     </table>
                 </td>
